--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@rafa0805/prettier-config",
   "version": "1.0.0",
   "description": "My prettier-config to be shared between projects.",
-  "main": "index.js",
+  "main": ".prettierrc.json",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
