--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/rafa0805/prettier-config/issues"
   },
-  "homepage": "https://github.com/rafa0805/prettier-config#readme"
+  "homepage": "https://github.com/rafa0805/prettier-config#readme",
+  "devDependencies": {
+    "prettier": "^3.0.0"
+  }
 }
