--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My prettier-config to be shared between projects.",
   "main": ".prettierrc.json",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
